fixed showScreen alignment

--- a/components/Showcase/ShowComp/PDFChat/PdfChat.module.scss
+++ b/components/Showcase/ShowComp/PDFChat/PdfChat.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 80vh;
   flex-direction: column;
+  padding-top: 10%;
   gap: 20px;
 }
